--- a/content/modules/ROOT/pages/02-01-getting-connected.adoc
+++ b/content/modules/ROOT/pages/02-01-getting-connected.adoc
@@ -16,6 +16,10 @@ In a new window or tab, open the following URL and log in:
 
 * The {rhoai} Dashboard URL for our shared environment:
 ** https://rhods-dashboard-redhat-ods-applications.{openshift_cluster_ingress_domain}/[https://rhods-dashboard-redhat-ods-applications.{openshift_cluster_ingress_domain}/,window=_blank]
+* Click on the `Login with OpenShift` button:
++
+[.bordershadow]
+image::02/02-01-login3.png[width=50%]
 * Enter your credentials (as detailed above)
 * The result should look like:
 +
