--- a/content/modules/ROOT/pages/05-01-application.adoc
+++ b/content/modules/ROOT/pages/05-01-application.adoc
@@ -15,6 +15,7 @@ The different components are:
 - The **backend**: a Python FastAPI application, running in a container on {ocp}. It handles the communication with the database, the LLM, and the Object storage. It handles the communication with the frontend by exposing a REST API.
 - The **database**: a PostgreSQL database, running in a container on {ocp}. It stores the claims.
 - The **LLM**: the language model used to summarize and extract information from the claims. It is consumed by the backend through its API.
+- The **VectorDB**: the vector database used to store documents for retrieval in the RAG part. It's based on Milvus.
 - The **Object storage**: an S3-compatible object storage. It stores the claim images.
 
 == Application Code
